# internal/api/ogen/oas_response_encoders_gen.go
@@ -5196,9 +5196,16 @@ func encodeMarkTVEpisodeWatchedResponse(response MarkTVEpisodeWatchedRes, w http
 
 func encodeOidcAuthorizeResponse(response OidcAuthorizeRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
-	case *OidcAuthorizeFound:
-		w.WriteHeader(302)
-		span.SetStatus(codes.Ok, http.StatusText(302))
+	case *OIDCAuthURLResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(200)
+		span.SetStatus(codes.Ok, http.StatusText(200))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
 
 		return nil
 
